[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/beam-Sheet.png" type="Texture" id=1]
[ext_resource path="res://assets/beambody.png" type="Texture" id=2]
[ext_resource path="res://src/spells/SpellPowerBeam.gd" type="Script" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Animation" id=5]
resource_name = "kill"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("ExitPoint/Beam:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ExitPoint/Beam:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -8 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ExitPoint/Cloud:scale")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ExitPoint/CloudEnd:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0, 0 ) ]
}

[node name="SpellPowerBeam" type="Node2D"]
script = ExtResource( 3 )

[node name="ExitPoint" type="Node2D" parent="."]
position = Vector2( 18, 0 )

[node name="Beam" type="Polygon2D" parent="ExitPoint"]
position = Vector2( 0, -8 )
texture = ExtResource( 2 )
polygon = PoolVector2Array( 0, 16, -9.53674e-07, 0, 200, 0, 200, 16 )

[node name="Cloud" type="AnimatedSprite" parent="ExitPoint"]
frames = SubResource( 4 )
playing = true

[node name="CloudEnd" type="AnimatedSprite" parent="ExitPoint"]
position = Vector2( 200, 0 )
frames = SubResource( 4 )
frame = 2
playing = true

[node name="RayCasts" type="Node2D" parent="ExitPoint"]

[node name="RayCastTop" type="RayCast2D" parent="ExitPoint/RayCasts"]
position = Vector2( 0, -4 )
enabled = true
cast_to = Vector2( 200, 0 )

[node name="RayCastCenter" type="RayCast2D" parent="ExitPoint/RayCasts"]
enabled = true
cast_to = Vector2( 200, 0 )

[node name="RayCastBottom" type="RayCast2D" parent="ExitPoint/RayCasts"]
position = Vector2( 0, 4 )
enabled = true
cast_to = Vector2( 200, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/kill = SubResource( 5 )
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
